<resources>
    <string name="app_name">U 爱</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="register">注册</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">登录</string>
    <string name="logout">退出登录</string>
    <string name="cancle">取消</string>
    <string name="sure">确认</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>

    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>

    <string name="add_avator">头像</string>
    <string name="send">发送</string>
    <string name="update_nick">修改昵称</string>
    <string name="update_sex">修改性别</string>
    <string name="update_location">修改地区</string>
    <string name="title_activity_diary">DiaryActivity</string>
    <string name="title_activity_add">Add</string>
    <string name="title_activity_add_diary">AddDiaryActivity</string>
    <string name="choose_date">选择日期</string>
    <string name="title_activity_memory_day">MemoryDayActivity</string>
    <string name="longclick_speak">长按说话</string>
    <string name="picture">图片</string>
    <string name="camera">拍摄</string>
    <string name="location">位置</string>
    <string name="voice_up_tips">手指上滑,取消发送</string>
    <string name="voice_cancel_tips">松开手指，取消发送</string>
    <string name="voice_short_tips">录音时间太短！</string>
    <string name="title_activity_add_time">AddTimeActivity</string>
    <string name="hint_talksomeing">说点什么吧？</string>
    <string name="title_activity_show_photo">ShowPhotoActivity</string>
    <string name="title_activity_get_location">GetLocationActivity</string>

    <string-array name="permissions">
        <item>@string/permission_recode_audio_hint</item>
        <item>@string/permission_get_accounts_hint</item>
        <item>@string/permission_read_phone_hint</item>
        <item>@string/permission_call_phone_hint</item>
        <item>@string/permission_camera_hint</item>
        <item>@string/permission_access_fine_location_hint</item>
        <item>@string/permission_access_coarse_location_hint</item>
        <item>@string/permission_read_external_hint</item>
        <item>@string/permission_white_external_hint</item>
    </string-array>
    <string name="permission_get_accounts_hint">没有账户权限，无法开启这个功能，请开启权限。</string>
    <string name="permission_read_phone_hint">没有读取手机状态权限，无法开启这个功能，请开启权限。</string>
    <string name="permission_call_phone_hint">没有拨打电话权限，无法开启这个功能，请开启权限。</string>
    <string name="permission_camera_hint">没有相机权限，无法开启这个功能，请开启权限。</string>
    <string name="permission_access_fine_location_hint">没有定位权限，无法开启这个功能，请开启权限。</string>
    <string name="permission_access_coarse_location_hint">没有粗略定位权限，无法开启这个功能，请开启权限。</string>
    <string name="permission_read_external_hint">没有读取存储器权限，无法开启这个功能，请开启权限。</string>
    <string name="permission_white_external_hint">没有存储器权限，无法开启这个功能，请开启权限。</string>
    <string name="permission_recode_audio_hint">没有短信权限，无法开启这个功能，请开启权限。</string>
</resources>
