<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_bg"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="@dimen/dp10"
        android:layout_marginBottom="@dimen/dp10"
        android:gravity="center"
        android:textColor="@color/black"
        android:text="@string/update_nick"
        android:textSize="@dimen/sp20"
        />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/alertdialog_line" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_all"
        android:orientation="vertical" >
    <TextView
        android:id="@+id/txt_explain"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp15"
        android:layout_marginRight="@dimen/dp15"
        android:gravity="left"
        android:textColor="@color/tc_first"
        android:layout_marginTop="@dimen/dp15"
        android:text="起个昵称吧,好让另一半认得你："
        android:textSize="@dimen/sp14" />
    <EditText
        android:id="@+id/edit_nick"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp15"
        android:layout_marginRight="@dimen/dp15"
        android:layout_marginBottom="@dimen/dp15"
        android:layout_marginTop="@dimen/dp10"
        android:background="@drawable/txt_backgroung"
        android:inputType="none"
        android:paddingBottom="3dp"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        android:paddingTop="3dp"
        android:textColor="@color/tc_first"
        android:textSize="20sp" />
    </LinearLayout>
    <ImageView
        android:id="@+id/dialog_marBottom"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/alertdialog_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_dialog_cancle"
            android:layout_width="wrap_content"
            android:layout_height="43dp"
            android:layout_weight="1"
            android:background="@drawable/alertdialog_left_selector"
            android:gravity="center"
            android:text="@string/cancle"
            android:textColor="@color/actionsheet_blue"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/img_line"
            android:layout_width="0.5dp"
            android:layout_height="43dp"
            android:background="@color/alertdialog_line" />

        <Button
            android:id="@+id/btn_dialog_ok"
            android:layout_width="wrap_content"
            android:layout_height="43dp"
            android:layout_weight="1"
            android:background="@drawable/alertdialog_right_selector"
            android:gravity="center"
            android:text="@string/sure"
            android:textColor="@color/actionsheet_blue"
            android:textSize="18sp"
            />
    </LinearLayout>

</LinearLayout>